tests/ast_interpreter/err_div_by_zero.expected
<string>:2:7: error: division by zero
    4 / 0;
      ^
